--- a/package.json
+++ b/package.json
@@ -21,29 +21,20 @@
     },
     "license": "MIT2",
     "dependencies": {
-        "api-service": "^1.0.8",
         "@kano/kwc-auth": "^3.0.0-beta.18",
-        "bower": "^1.8.8",
-        "cli-color": "~0.2.x",
-        "coffee-script": "~1.7.x",
+        "api-service": "^1.0.8",
+        "coffeescript": "^2.4.1",
         "color": "^0.7.3",
-        "deep-equal": "^1.0.0",
-        "griddy": "0.0.x",
-        "http-server": "^0.11.1",
         "kano-world-sdk": "^3.0.15",
-        "lodash": "~2.4.x",
-        "marked": "~0.3.x",
-        "moment": "^2.10.6",
-        "nib": "^1.1.2",
-        "partialify": "^3.1.1",
-        "throttle-debounce": "^0.1.1"
+        "marked": "^0.6.2"
     },
     "devDependencies": {
-        "tiny-lr": "0.0.9",
+        "chai": "3.2.x",
+        "cli-color": "~0.2.x",
         "del": "1.1.1",
         "express": "^4.10.5",
+        "griddy": "0.0.x",
         "gulp": "^3.9.x",
-        "gulp-browserify": "^0.5.1",
         "gulp-callback": "0.0.3",
         "gulp-html-i18n": "0.3.4",
         "gulp-jade": "~0.4.x",
@@ -51,9 +42,16 @@
         "gulp-ng-annotate": "^2.0.0",
         "gulp-rename": "~0.2.x",
         "gulp-stylus": "^2.0.1",
-        "gulp-uglify": "^2.0.0",
-        "chai": "3.2.x",
-        "mocha": "2.3.x"
+        "gulp-uglify": "^2.1.2",
+        "http-server": "^0.11.1",
+        "lodash": "^4.17.11",
+        "mocha": "2.3.x",
+        "nib": "^1.1.2",
+        "rollup-analyzer-plugin": "^1.2.0",
+        "rollup-plugin-commonjs": "^9.3.4",
+        "rollup-plugin-node-resolve": "^4.2.3",
+        "rollup-plugin-replace": "^2.2.0",
+        "tiny-lr": "0.0.9"
     },
     "engines": {
         "node": "6.10.x"
